# flake8-no-callbacks

./: .gitignore  README.md  flake8_no_callbacks.py  requirements-dev.txt  setup.cfg
tests/: test_flake8_no_callbacks.py
