[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = flake8-no-callbacks

author = Vera Lobacheva
author_email = v.lobacheva@hh.ru
maintainer = Vera Lobacheva
maintainer_email = v.lobacheva@hh.ru

version = 0.0.1

description = Flake8 plugin that prohibits to use callbacks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flake8, tornado, callback

url = https://github.com/vera-l/flake8-no-callbacks
download_url = https://github.com/vera-l/flake8-no-callbacks

license = MIT license

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Framework :: Flake8

[options]
py_modules = flake8_no_callbacks
python_requires = >=3.8.1
install_requires = flake8>=3.7

[options.entry_points]
flake8.extension = NOC = flake8_no_callbacks:Plugin

[tool:pytest]
addopts = --doctest-modules --cov=. --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8

[flake8]
max_line_length = 88
exclude = tests/*,.tox/*,.nox/*,docs/*
ignore = H301,H306,H404,H405,W503,D105,D413,D103,D107,E252,N803,E203,C416,A001,A003,P102

[isort]
import_heading_stdlib=Core Library modules
import_heading_thirdparty=Third party modules
import_heading_firstparty=First party modules
import_heading_localfolder=Local modules
include_trailing_comma=True
indent='    '
known_third_party = click,pytest,setuptools
length_sort=0
line_length=80
multi_line_output=3

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=false
warn_unused_ignores=true
strict_optional=true
python_version=3.8
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=false
disallow_incomplete_defs=true
follow_imports=skip
html_report=mypy-report
mypy_path=typeshed/pyi:typeshed/imports
